# Comfyui_CXH_Phi_3.5

./: Phi_nodes.py  README.md  __init__.py  pyproject.toml  requirements.txt
workflow/: workflow.json
